--- a/02-docker-build-push-to-acs-deploy-to-aks-pipeline.yml
+++ b/02-docker-build-push-to-acs-deploy-to-aks-pipeline.yml
@@ -28,8 +28,7 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: $(vmImageName)
+    pool: JRAR
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
@@ -51,8 +50,7 @@ stages:
   jobs:
   - deployment: Deploy
     displayName: Deploy
-    pool:
-      vmImage: $(vmImageName)
+    pool: JRAR
     environment: 'Rahulaarviazuredevopsgithubacraksapp1-1457.default'
     strategy:
       runOnce:
