--- a/03-custom1-pipeline-buildandpush-to-acr-and-publish-artifacts.yml
+++ b/03-custom1-pipeline-buildandpush-to-acr-and-publish-artifacts.yml
@@ -49,8 +49,9 @@ stages:
         Contents: '**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
         OverWrite: true
-
-
+        
+     
+    - bash: echo After copying to Build Artifact Directory; ls -R $(Build.ArtifactStagingDirectory) 
 
    
     
