--- a/03-custom1-pipeline-buildandpush-to-acr-and-publish-artifacts.yml
+++ b/03-custom1-pipeline-buildandpush-to-acr-and-publish-artifacts.yml
@@ -53,5 +53,14 @@ stages:
      
     - bash: echo After copying to Build Artifact Directory; ls -R $(Build.ArtifactStagingDirectory) 
 
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'kube-manifests'
+        publishLocation: 'Container'
+
+
+
    
     
