Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ stages:
   - stage: Build
     displayName: Build Stage
     jobs:
-      - job: Build and Push
+      - job: Build
         displayName: CreatingPushing
         pool: JRAR
         steps:
